--- a/websoccer/templates/default/blocks/results-list.twig
+++ b/websoccer/templates/default/blocks/results-list.twig
@@ -6,64 +6,65 @@
 	<table class="table table-striped">
 		<thead>
 			<tr>
-				<th>{{ i18n.getMessage("entity_match_datum") }}</th>
-				<th>{{ i18n.getMessage("entity_match_home_verein") }}</th>
-				<th>{{ i18n.getMessage("entity_match_gast_verein") }}</th>
-				<th>{{ i18n.getMessage("match_result") }}</th>
+				<th style="text-align: center">{{ i18n.getMessage("entity_match_datum") }}</th>
+				<th></th>
+				<th colspan="2" style="text-align: right">{{ i18n.getMessage("entity_match_home_verein") }}</th>
+				<th></th>
+				<th colspan="2">{{ i18n.getMessage("entity_match_gast_verein") }}</th>
+				<th style="text-align: center">{{ i18n.getMessage("match_result") }}</th>
 			</tr>
 		</thead>
 		<tbody>
 		{% for match in matches %}
 			<tr>
-				<td>
+				<td style="text-align: center">
+					{{ env.getFormattedDatetime(match.date, i18n) }}
+				</td>
+				<td style="text-align: center">
 					{% if match.type == "Ligaspiel" %}
 						<i class="fa fa-globe wstooltip" title="{{ i18n.getMessage("option_Ligaspiel") }}"></i>
 					{% elseif match.type == "Freundschaft" %}
 						<i class="fa fa-handshake-o wstooltip" title="{{ i18n.getMessage("option_Freundschaft") }}"></i>
 					{% else %}
 						<i class="fa fa-trophy wstooltip" title="{{ i18n.getMessage("option_Pokalspiel") }} ({{ match.cup_name }}, {{ match.cup_round }})"></i>
-					{% endif %}
-					{{ env.getFormattedDatetime(match.date, i18n) }}
+					{% endif %}				
 				</td>
-				<td>
-					{% if match.home_team_picture|length %}
-						<img src="{{ env.getConfig("context_root") }}/uploads/club/{{ match.home_team_picture }}" style="max-width: 20px"/>
-					{% endif %}
+				<td style="text-align: right">
 					<a href="{{ env.getInternalUrl("team", "id=" ~ match.home_id) }}">{{ match.home_team }}</a>
 					{% if match.home_noformation %}
 						<i class="icon-bolt wstooltip" title="{{ i18n.getMessage("match_details_noformation", match.home_team) }}"></i>
 					{% endif %}
-					{% if match.home_user_id > 0 %}
-						<br>
-						{% if match.home_user_picture|length > 0 %}
-							<a href="{{ env.getInternalUrl("user", "id=" ~ match.home_user_id) }}"><img src="{{ match.home_user_picture }}" style="width: 20px; height: 20px"/></a>
-						{% endif %}
-						<small><a href="{{ env.getInternalUrl("user", "id=" ~ match.home_user_id) }}">{{ match.home_user_nick }}</a></small>
+				</td>
+				<td style="text-align: center">
+					{% if match.home_team_picture|length %}
+						<img src="{{ env.getConfig("context_root") }}/uploads/club/{{ match.home_team_picture }}" style="max-width: 20px"/>
 					{% endif %}
 				</td>
-				<td>
+				<td style="text-align: center">vs.</td>
+				<td style="text-align: center">
 					{% if match.guest_team_picture|length %}
 						<img src="{{ env.getConfig("context_root") }}/uploads/club/{{ match.guest_team_picture }}" style="max-width: 20px"/>
-					{% endif %}
+					{% endif %}					
+				</td>				
+				<td style="text-align: left">
 					<a href="{{ env.getInternalUrl("team", "id=" ~ match.guest_id) }}">{{ match.guest_team }}</a>
 					{% if match.guest_noformation %}
 						<i class="icon-bolt wstooltip" title="{{ i18n.getMessage("match_details_noformation", match.guest_team) }}"></i>
 					{% endif %}
-					{% if match.guest_user_id > 0 %}
-						<br>
-						{% if match.guest_user_picture|length > 0 %}
-							<a href="{{ env.getInternalUrl("user", "id=" ~ match.guest_user_id) }}"><img src="{{ match.guest_user_picture }}" style="width: 20px; height: 20px"/></a>
-						{% endif %}
-						<small><a href="{{ env.getInternalUrl("user", "id=" ~ match.guest_user_id) }}">{{ match.guest_user_nick }}</a></small>
-					{% endif %}
 				</td>
-				<td><a href="{{ env.getInternalUrl("match", "id=" ~ match.id) }}" title="{{ i18n.getMessage("match_navlabel") }}">
+				<td style="text-align: center">
+				<a href="{{ env.getInternalUrl("match", "id=" ~ match.id) }}" title="{{ i18n.getMessage("match_navlabel") }}">
 				{% if match.simulated == 1 %}
-				{{ match.home_goals }} - {{ match.guest_goals }}
+				<img src="https://app-raisal.de/websoccer/uploads/numbers/{{ match.home_goals }}.png" style="height: 20px" />
+				-
+				<img src="https://app-raisal.de/websoccer/uploads/numbers/{{ match.guest_goals }}.png" style="height: 20px" />
 				{% elseif match.minutes > 0  %}
-				<i class="icon-fire" title="{{ i18n.getMessage("match_live_label") }}"></i> {{ match.home_goals }} - {{ match.guest_goals }}
+				<i class="icon-fire" title="{{ i18n.getMessage("match_live_label") }}"></i> 
+				<img src="https://app-raisal.de/websoccer/uploads/numbers/{{ match.home_goals }}.png" style="height: 20px" />
+				-
+				<img src="https://app-raisal.de/websoccer/uploads/numbers/{{ match.guest_goals }}.png" style="height: 20px" />
 				{% else %}
-				{{ i18n.getMessage("match_navlabel") }}
+				<i class="fa fa-info-circle" aria-hidden="true"></i>
 				{% endif %}
 				</a></td>
 			</tr>
