--- a/websoccer/templates/default/blocks/today-matches-list-smallblock.twig
+++ b/websoccer/templates/default/blocks/today-matches-list-smallblock.twig
@@ -12,24 +12,24 @@
 	{% set homeTeamPicture = "<img src=\""~ env.getConfig("context_root") ~ "/uploads/club/" ~ match.home_team_picture ~ "\" style=\"height: 25px;\" />" %}
 	{% set guestTeamPicture = "<img src=\""~ env.getConfig("context_root") ~ "/uploads/club/" ~ match.guest_team_picture ~ "\" style=\"height: 25px;\" />" %}
 
-	{% if match.type == 'Freundschaft' %}
-		{% set matchType = '<i class="fa fa-handshake-o"></i>' %}
-	{% elseif match.type == 'Ligaspiel' %}
-		{% set matchType = '<i class="fa fa-globe"></i>' %}
-	{% else %}
-		{% set matchType = '<i class="fa fa-trophy"></i>' %}
-	{% endif %}
-
 	  <tr>
 	  	<td>{{ env.getFormattedDatetime(match.date) }}</td>
-	  	<td>{{ matchType|raw }}</td>
+	  	<td>
+			{% if match.type == "Ligaspiel" %}
+				<i class="fa fa-globe wstooltip" title="{{ i18n.getMessage("option_Ligaspiel") }}"></i>
+			{% elseif match.type == "Freundschaft" %}
+				<i class="fa fa-handshake-o wstooltip" title="{{ i18n.getMessage("option_Freundschaft") }}"></i>
+			{% else %}
+				<i class="fa fa-trophy wstooltip" title="{{ i18n.getMessage("option_Pokalspiel") }} ({{ match.cup_name }}, {{ match.cup_round }})"></i>
+			{% endif %}		
+		</td>
 	    <td style="text-align: right"><a href="{{ env.getInternalUrl("team", "id=" ~ match.home_id) }}">{{ match.home_team }}</a></td>
 	    <td style="text-align: center">{{ homeTeamPicture|raw }}</td>
 	    <td style="text-align: center"> vs. </td>
 	    <td style="text-align: center">{{ guestTeamPicture|raw }}</td>
 	    <td style="text-align: left"><a href="{{ env.getInternalUrl("team", "id=" ~ match.guest_id) }}">{{ match.guest_team }}</a></td>
 	    {% if match.simulated %}
-	    	<td style="text-align: center"><a href="{{ env.getInternalUrl("match", "id=" ~ match.id) }}" title="{{ i18n.getMessage("match_navlabel") }}">{{ match.home_goals }}:{{ match.guest_goals }}</a></td>
+	    	<td style="text-align: center"><a href="{{ env.getInternalUrl("match", "id=" ~ match.id) }}" title="{{ i18n.getMessage("match_navlabel") }}"><img src="https://app-raisal.de/websoccer/uploads/numbers/{{ match.home_goals }}.png" style="height: 20px" /> : <img src="https://app-raisal.de/websoccer/uploads/numbers/{{ match.guest_goals }}.png" style="height: 20px" /></a></td>
 	    {% else %}
 	    	<td style="text-align: center"><a href="{{ env.getInternalUrl("match", "id=" ~ match.id) }}" title="{{ i18n.getMessage("match_navlabel") }}"><i class="fa fa-info-circle" aria-hidden="true"></i>
 </a></td>
