--- a/websoccer/templates/default/views/freeclubs.twig
+++ b/websoccer/templates/default/views/freeclubs.twig
@@ -48,9 +48,12 @@
 							<td>
 								<small>
 									<p><strong>{{ i18n.getMessage("entity_player_w_staerke") }}</strong><br>
-									{% for strengthlevel in 1..5 %}
-										<i class="icon-star{% if (30 + strengthlevel * 10) > club.team_strength %}-empty{% endif %}"></i>
-									{% endfor %}</p>
+										<i class="icon-star{% if 50 > club.team_strength %}-empty{% endif %}"></i>	
+										<i class="icon-star{% if 70 > club.team_strength %}-empty{% endif %}"></i>
+										<i class="icon-star{% if 74 > club.team_strength %}-empty{% endif %}"></i>
+										<i class="icon-star{% if 78 > club.team_strength %}-empty{% endif %}"></i>
+										<i class="icon-star{% if 82 > club.team_strength %}-empty{% endif %}"></i>
+									</p>
 															
 									<p><strong>{{ i18n.getMessage("entity_stadium") }}</strong><br>
 									{{ (club.stadium_p_steh + club.stadium_p_sitz + club.stadium_p_haupt_steh + club.stadium_p_haupt_sitz + club.stadium_p_vip)|number_format(0, ',', '.') }}</p>
