--- a/websoccer/templates/default/views/training-trainerdetails.twig
+++ b/websoccer/templates/default/views/training-trainerdetails.twig
@@ -1,7 +1,6 @@
 {% import "macros/formelements.twig" as formelements %}
 {% import "macros/statisticelements.twig" as statisticelements %}
 {% import "macros/profileelements.twig" as profile %}
-{% import "macros/premium.twig" as premium %}
 
 {% extends "base.twig" %}
 
@@ -11,24 +10,11 @@
 
 {% block page_content %}
 
-{% if trainer.premiumfee %}
-	<p>{{ premium.premiumbadge(trainer.premiumfee) }}</p>
-{% endif %}
-
-{% set bar_tech = statisticelements.progressbar(trainer.p_technique) %}
-{% set bar_stamina = statisticelements.progressbar(trainer.p_stamina) %}
-
-{{ profile.infofield(i18n.getMessage("entity_trainer_salary"), trainer.salary|number_format(0, ',', '.') ~ " " ~ env.getConfig("game_currency")) }}
-{{ profile.infofield(i18n.getMessage("entity_trainer_p_technique"), bar_tech|raw, true) }}
-{{ profile.infofield(i18n.getMessage("entity_trainer_p_stamina"), bar_stamina|raw, true) }}
+{{ profile.infofield(i18n.getMessage("entity_trainer_p_frische"), trainer.p_frische, true) }}
+{{ profile.infofield(i18n.getMessage("entity_trainer_p_kondition"), trainer.p_kondition, true) }}
+{{ profile.infofield(i18n.getMessage("entity_trainer_p_zufriedenheit"), trainer.p_zufriedenheit, true) }}
 
 <form class="form-horizontal" method="post">
-	<fieldset>
-    	<legend>{{ i18n.getMessage('training_choose_trainer_title') }}</legend>
-    	
-    	
-		{{ formelements.textfield('units', i18n.getMessage('training_choose_trainer_units'), env.getRequestParameter("units"), true, validationMsg, "number") }}
-	</fieldset>
 	<div class="form-actions">
 		<button type="submit" class="btn btn-primary">{{ i18n.getMessage('button_save') }}</button>
 		<a href="{{ env.getInternalUrl("training") }}" class="btn">{{ i18n.getMessage('button_cancel') }}</a>
